--- a/CHANGES
+++ b/CHANGES
@@ -83,6 +83,7 @@ Corrected time() -> time.time() in getUtilityInfo() (ATLASExperiment)
 Corrected bad return (function returned pilotErrorDiag string, but should have returned an outputRet dictionary) in errorToReport(); caused timed-out jobs at BNL
 to get the wrong error label (LocalSiteMover)
 Created new error code ERR_PAYLOADEXCEEDMAXMEM, 1235, "Payload exceeded maximum allowed memory" (PilotErrors)
+Now using getJSONDictionary() in getJobReport() to avoid problems with unicode seen in test jobs (FileHandling)
 
 Note: useAtlasSetup() is always returning True (ATLASExperiment)
 
