--- a/CHANGES
+++ b/CHANGES
@@ -82,10 +82,7 @@ Improved reading of memory_monitor_summary.json in getUtilityInfo() (ATLASExperi
 Corrected time() -> time.time() in getUtilityInfo() (ATLASExperiment)
 Corrected bad return (function returned pilotErrorDiag string, but should have returned an outputRet dictionary) in errorToReport(); caused timed-out jobs at BNL
 to get the wrong error label (LocalSiteMover)
-Created new error code ERR_PAYLOADEXCEEDMAXMEM, 1235, "Payload exceeded maximum allowed memory" (PilotErrors)
-Now using getJSONDictionary() in getJobReport() to avoid problems with unicode seen in test jobs (FileHandling)
-
-Note: useAtlasSetup() is always returning True (ATLASExperiment)
+Changed useAtlasSetup() to always return True for all releases (ATLASExperiment)
 
 (Still using old tolog function)
 
@@ -97,6 +94,9 @@ Memory monitoring updates:
 - Created empty getUtilityInfo() (Experiment)
 - Updated call to getUtilityInfo() in getNodeStructure() (PandaServerClient)
 - Now importing getJSONDictionary in ATLASExperiment
+- Created getUtilityOutputFilename() used by getUtilityCommand() (ATLASExperiment)
+- Created new error code ERR_PAYLOADEXCEEDMAXMEM, 1235, "Payload exceeded maximum allowed memory" (PilotErrors)
+- Now using getJSONDictionary() in getJobReport() to avoid problems with unicode seen in test jobs (FileHandling)
 
 LFC cleanup:
 - Removed getLFCDir(), lfc_mkdir(), lcg_rf() (SiteMover)
