--- a/CHANGES
+++ b/CHANGES
@@ -83,6 +83,7 @@ Corrected time() -> time.time() in getUtilityInfo() (ATLASExperiment)
 Corrected bad return (function returned pilotErrorDiag string, but should have returned an outputRet dictionary) in errorToReport(); caused timed-out jobs at BNL
 to get the wrong error label (LocalSiteMover)
 Changed useAtlasSetup() to always return True for all releases (ATLASExperiment)
+Created parseUtilityOutput() and findMaxPSS() (ATLASExperiment)
 
 (Still using old tolog function)
 
