--- a/CHANGES
+++ b/CHANGES
@@ -53,7 +53,7 @@ LOCAL SITE MOVER XXX
 TODO: update pUtil::getStdoutDictionary() to support the tail of the last updated AthenaMP log file; also update PandaServerClient::updatePandaServer() to
 take the latest log file and send it to the text indexer in debug mode (see Rod's mail on Nov. 24)
 
-
+DO NOT KILL JOBS THAT EXCEEDED MAX MEMORY!!!
 
 
 
