--- a/CHANGES
+++ b/CHANGES
@@ -169,6 +169,9 @@ Update from Alexey Anisenkon:
 - . Job object updates
 - . other mover related updates
 
+Update from Daniil:
+- New job recovery algorithm implemented (DeferredStageout module)
+
 REMOVE RunJobMira.py FROM DISTRIBUTION
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
