--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,8 @@
 Test failover to alt OS at UTA. code implemented. fake initial failure in S3 site mover
 check that jobMetrics is updated correctly
 
-
+OS failover: should use same alt stageout mechanism as on normal SEs, ie be switch on with the same catchall constant.
+Should report which os_id was used.
 
 
 Complete change log for PanDA Pilot version PICARD
@@ -81,6 +82,13 @@ General changes:
 - Ignoring test mode in updateJobStateTest() (JobRecovery)
 - Removing archive files if present prior to log file creation; requested by Emmanouil Vamvakopoulos et al (ATLASExperiment)
 - Cleaned up reporting of transferred file state in mover_put_data_new() and mover_put_data() (Mover)
+- Changed headPilotErrorDiag() to headPilotErrorDiag() to avoid annoying tailed error diagnostics, in get_data() and changed import (Mover)
+- Created headPilotErrorDiag() (pUtil)
+- Now using headPilotErrorDiag in makeJobReport() (pUtil)
+
+To avoid creating dark data in case the server has already failed the job before the pilot has finished
+The problem can happen if the server times out the job before tar+zip of huge log files have not finished within two hours
+- Added 55 minute time-outs each around tar+zip of log file in createLogFile() (JobLog)
 
 Updates to alternative stage-out mechanism (related to WORLD cloud and jobMetrics reporting)
 - Updated getTier1Queue() to handle WORLD cloud for alternative stage-out (ATLASSiteInformation)
@@ -91,6 +99,9 @@ Updates to alternative stage-out mechanism (related to WORLD cloud and jobMetric
 - Reporting alt_transferred file state in mover_put_data_new() and mover_put_data() (Mover)
 - Created getFilesOfState() (FileState, FileStateClient)
 - Using getFilesOfState() in getJobMetrics() (PandaServerClient)
+- Added --quiet to getLocalEMISetup to avoid interrupting JAVA warnings (ATLASSiteInformation)
+- Sending site to getJobMetrics() from getNodeStructure() (PandaServerClient)
+- Added site argument to getJobMetrics() (PandaServerClient)
 
 General bug fixes:
 - Corrected bad return (function returned pilotErrorDiag string, but should have returned an outputRet dictionary) in errorToReport(); caused timed-out jobs at BNL
@@ -99,6 +110,7 @@ to get the wrong error label (LocalSiteMover)
 - Removed half-implemented getFilenamesAndGuid() (Mover)
 - Changed 'eventservice' to 'logs' in transferLogFile() before adding info to OS transfer dictionary (JobLog)
 - Added missing MAKEFLAGS for ND jobs, in setupNordugridTrf() (NordugridATLASExperiment)
+- Improved handling of lcg-get-checksum output in case of irrelevant warnings in lcgGetChecksum()
 
 Setup of ATLAS Release changes
 - Created a new getJobExecutionCommand(), renamed old function to getJobExecutionCommandOld() (ATLASExperiment)
@@ -106,8 +118,36 @@ Setup of ATLAS Release changes
 - Updated getSplitHomePackage() to handle AnalysisTransforms-AtlasP1HLT_* correctly (ATLASexperiment)
 - Now using getSplitHomePackage() in getJobExecutionCommand() (ATLASExperiment)
 
-Added fail-over to alternative OS
-- Created copyFullQueuedata(), getFullQueuedataDictionary(), findOSEnabledQueuesInFullQueuedata(), findAllObjectStores(), getAlternativeOS(), getFullQueuedataFilePath() (SiteInformation, ATLASSiteInformation)
+Objectstore updates
+  Added fail-over to alternative OS
+    - Created copyFullQueuedata(), getFullQueuedataDictionary(), findOSEnabledQueuesInFullQueuedata(), findAllObjectStores(), getAlternativeOS(), getFullQueuedataFilePath() (SiteInformation, ATLASSiteInformation)
+    - Now using getNewOSStoragePath() in mover_put_data() to get updated path and os_id (Mover)
+  OS identification
+    - Created getOSIDFromName() (SiteInformation)
+    - Returning the os_id from getNewLogPath(), received in mover_put_data()
+    - Returning the os_id in getObjectstorePath() (SiteInformation)
+    - Receiving the os_id in getLogPath() (JobLog)
+    - Receiving the os_id in transferActualLogFile() (JobLog)
+    - Now receiving and returning os_id from getDDMStorage() (Mover)
+    - Receiving os_id in mover_put_data() and mover_put_data_new() (Mover)
+    - Receiving os_id in getFileInfo() (Mover)
+    - Sending os_id to mover_put_data() from transferActualLogFile() (JobLog)
+    - Added os_id argument to mover_put_data() and mover_put_data_new() (Mover)
+    - Sending os_id to getDDMStore() from mover_put_data() and mover_put_data_new() (Mover)
+    - Sending os_id to getObjectstorePath() from ..
+    - Added os_id argument to getObjectstorePath() (SiteInformation)
+    - Sending os_id to getObjectstoresField() from getObjectstorePath() (SiteInformation)
+    - Added os_id argument to getObjectstoresField() (SiteInformation)
+    - Sending os_id to getObjectstoresList() from getObjectstoresField() (SiteInformation)
+    - Added os_id argument to getObjectstoresList() (SiteInformation)
+    - Removed useless code that looked for objectstores in queuedata in getObjectstoresList() (SiteInformation)
+    - Sending os_id to getNewQueuedata() from getObjectstoresList() (SiteInformation)
+    - Added os_id argument to getNewQueuedata() (SiteInformation)
+    - getNewQueuedata() can now find queuedata matching a given os_id (SiteInformation)
+  General changes
+    - Minor cleanup; removed usage of alt, prodSourceLabel, testLevel, analysisJob, extradirs, proxyCheck in put_data(), removed proxyCheck in get_data() (S3ObjectstoreSiteMover)
+    - Removed unnecessary cleanupOS() and shouldCleanupOS() (RunJob)
+    - Removed useless getNewQueuedataXXX() (SiteInformation)
 
 Memory monitoring updates:
 - Calling __check_memory_usage() in monitoring loop, in monitor_job() (Monitor)
