--- a/CHANGES
+++ b/CHANGES
@@ -152,6 +152,7 @@ Objectstore updates
     - Sending os_id from asynchronousOutputStager() to updateEventRange() (RunJobEvent)
     - Added os_id argument to updateEventRange() (EventRange)
     - Sending objstoreID=os_id with updateEventRange call in updateEventRange() (EventRange)
+    - Added os_id argument to getObjectstoreName() (SiteInformation)
   General changes
     - Minor cleanup; removed usage of alt, prodSourceLabel, testLevel, analysisJob, extradirs, proxyCheck in put_data(), removed proxyCheck in get_data() (S3ObjectstoreSiteMover)
     - Removed unnecessary cleanupOS() and shouldCleanupOS() (RunJob)
