Now using bucket id instead of os id in event range update

--- a/CHANGES
+++ b/CHANGES
@@ -149,11 +149,12 @@ Objectstore updates
     - Receiving	os_id from mover_put_data() call in moveLostOutputFiles() (pilot)
     - Returning os_id from stageOut() and receiving it in transferToObjectStore() (RunJobEvent)
     - Returning os_id from transferToObjectStore(), received in asynchronousOutputStager() (RunJobEvent)
-    - Sending os_id from asynchronousOutputStager() to updateEventRange() (RunJobEvent)
-    - Added os_id argument to updateEventRange() (EventRange)
-    - Sending objstoreID=os_id with updateEventRange call in updateEventRange() (EventRange)
+    - Sending os_bucket_id from asynchronousOutputStager() to updateEventRange() (RunJobEvent)
+    - Added os_bucket_id argument to updateEventRange() (EventRange)
+    - Sending objstoreID=os_bucket_id with updateEventRange call in updateEventRange() (EventRange)
     - Added os_id argument to getObjectstoreName() (SiteInformation)
     - Added os_id argument to getObjectstoreBucketEndpoint() (SiteInformation)
+    - Created findObjectStore(), getOSInfoFromBucketID(), getBucketID() (SiteInformation)
   General changes
     - Minor cleanup; removed usage of alt, prodSourceLabel, testLevel, analysisJob, extradirs, proxyCheck in put_data(), removed proxyCheck in get_data() (S3ObjectstoreSiteMover)
     - Removed unnecessary cleanupOS() and shouldCleanupOS() (RunJob)
