Added logBucketID handling

--- a/CHANGES
+++ b/CHANGES
@@ -156,6 +156,8 @@ Objectstore updates
     - Added os_id argument to getObjectstoreName() (SiteInformation)
     - Added os_id argument to getObjectstoreBucketEndpoint() (SiteInformation)
     - Created findObjectStore(), getOSInfoFromBucketID(), getBucketID() (SiteInformation)
+    - Created logBucketID variable (Job)
+    - Reporting which OS bucket the log was written to, if any, in getJobMetrics() (PandaServerClient)
   General changes
     - Minor cleanup; removed usage of alt, prodSourceLabel, testLevel, analysisJob, extradirs, proxyCheck in put_data(), removed proxyCheck in get_data() (S3ObjectstoreSiteMover)
     - Removed unnecessary cleanupOS() and shouldCleanupOS() (RunJob)
